--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
     <section id="social">
         <h2>Join Us On Social Media</h2>
         <div class="social-icons">
-            <a href="https://www.youtube.com/" target="_blank">🐦</a>
-            <a href="#" target="_blank">💡</a>
+            <a href="https://x.com/never_learn__" target="_blank">🐦</a>
+            <a href="https://t.me/+fbzpPyyOYYZkMTQ0" target="_blank">💡</a>
         </div>
     </section>
 
